lunaticEngine/src/it/unibas/lunatic/parser/output/DependenciesCFParser.java
// Generated from DependenciesCF.g4 by ANTLR 4.5.3

package it.unibas.lunatic.parser.output;

import it.unibas.lunatic.LunaticConstants;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import java.util.Stack;
import it.unibas.lunatic.parser.operators.ParseDependenciesCF;
import it.unibas.lunatic.model.dependency.*;
import speedy.model.database.AttributeRef;
import speedy.model.expressions.Expression;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DependenciesCFParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, OPERATOR=13, IDENTIFIER=14, STRING=15, NUMBER=16, 
		NULL=17, WHITESPACE=18, LINE_COMMENT=19, EXPRESSION=20;
	public static final int
		RULE_prog = 0, RULE_dependencies = 1, RULE_sttgd = 2, RULE_etgd = 3, RULE_egd = 4, 
		RULE_query = 5, RULE_dependency = 6, RULE_querydependency = 7, RULE_positiveFormula = 8, 
		RULE_conclusionFormula = 9, RULE_conclusionQueryFormula = 10, RULE_atom = 11, 
		RULE_relationalAtom = 12, RULE_queryAtom = 13, RULE_builtin = 14, RULE_comparison = 15, 
		RULE_leftargument = 16, RULE_rightargument = 17, RULE_attribute = 18, 
		RULE_queryattribute = 19, RULE_value = 20, RULE_queryvalue = 21;
	public static final String[] ruleNames = {
		"prog", "dependencies", "sttgd", "etgd", "egd", "query", "dependency", 
		"querydependency", "positiveFormula", "conclusionFormula", "conclusionQueryFormula", 
		"atom", "relationalAtom", "queryAtom", "builtin", "comparison", "leftargument", 
		"rightargument", "attribute", "queryattribute", "value", "queryvalue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'ST-TGDs:'", "'T-TGDs:'", "'EGDs:'", "'Queries:'", "':'", "'->'", 
		"'.'", "'<-'", "','", "'('", "')'", "'?'", null, null, null, null, "'#NULL#'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "OPERATOR", "IDENTIFIER", "STRING", "NUMBER", "NULL", "WHITESPACE", 
		"LINE_COMMENT", "EXPRESSION"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DependenciesCF.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	private static Logger logger = LoggerFactory.getLogger(DependenciesParser.class);

	private ParseDependenciesCF generator = new ParseDependenciesCF();

	private Stack<IFormula> formulaStack = new Stack<IFormula>();

	private Dependency dependency;
	private IFormula formulaWN;
	private PositiveFormula positiveFormula;
	private IFormulaAtom atom;
	private FormulaAttribute attribute;
	private StringBuilder expressionString;
	private String leftConstant;
	private String rightConstant;
	private int counter;
	private int attributePosition;
	private boolean inPremise;
	private boolean stTGD;

	public void setGenerator(ParseDependenciesCF generator) {
	      this.generator = generator;
	}


	public DependenciesCFParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public DependenciesContext dependencies() {
			return getRuleContext(DependenciesContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			dependencies();
			  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DependenciesContext extends ParserRuleContext {
		public List<SttgdContext> sttgd() {
			return getRuleContexts(SttgdContext.class);
		}
		public SttgdContext sttgd(int i) {
			return getRuleContext(SttgdContext.class,i);
		}
		public List<EtgdContext> etgd() {
			return getRuleContexts(EtgdContext.class);
		}
		public EtgdContext etgd(int i) {
			return getRuleContext(EtgdContext.class,i);
		}
		public List<EgdContext> egd() {
			return getRuleContexts(EgdContext.class);
		}
		public EgdContext egd(int i) {
			return getRuleContext(EgdContext.class,i);
		}
		public List<QueryContext> query() {
			return getRuleContexts(QueryContext.class);
		}
		public QueryContext query(int i) {
			return getRuleContext(QueryContext.class,i);
		}
		public DependenciesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dependencies; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).enterDependencies(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).exitDependencies(this);
		}
	}

	public final DependenciesContext dependencies() throws RecognitionException {
		DependenciesContext _localctx = new DependenciesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dependencies);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(47);
				match(T__0);
				setState(49); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(48);
					sttgd();
					}
					}
					setState(51); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==IDENTIFIER );
				 counter = 1;
				}
			}

			setState(65);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(57);
				match(T__1);
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(58);
					etgd();
					}
					}
					setState(61); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==IDENTIFIER );
				 counter = 1;
				}
			}

			setState(75);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(67);
				match(T__2);
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(68);
					egd();
					}
					}
					setState(71); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==IDENTIFIER );
				 counter = 1;
				}
			}

			setState(85);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(77);
				match(T__3);
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(78);
					query();
					}
					}
					setState(81); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==IDENTIFIER );
				 counter = 1;
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SttgdContext extends ParserRuleContext {
		public DependencyContext dependency() {
			return getRuleContext(DependencyContext.class,0);
		}
		public SttgdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sttgd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).enterSttgd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).exitSttgd(this);
		}
	}

	public final SttgdContext sttgd() throws RecognitionException {
		SttgdContext _localctx = new SttgdContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sttgd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 stTGD = true; 
			setState(88);
			dependency();
			 dependency.setType(LunaticConstants.STTGD); dependency.setId("m" + counter++); generator.addSTTGD(dependency); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EtgdContext extends ParserRuleContext {
		public DependencyContext dependency() {
			return getRuleContext(DependencyContext.class,0);
		}
		public EtgdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_etgd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).enterEtgd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).exitEtgd(this);
		}
	}

	public final EtgdContext etgd() throws RecognitionException {
		EtgdContext _localctx = new EtgdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_etgd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 stTGD = false; 
			setState(92);
			dependency();
			 dependency.setType(LunaticConstants.ExtTGD); dependency.setId("t" + counter++); generator.addExtTGD(dependency); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EgdContext extends ParserRuleContext {
		public DependencyContext dependency() {
			return getRuleContext(DependencyContext.class,0);
		}
		public EgdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_egd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).enterEgd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).exitEgd(this);
		}
	}

	public final EgdContext egd() throws RecognitionException {
		EgdContext _localctx = new EgdContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_egd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 stTGD = false; 
			setState(96);
			dependency();
			 dependency.setType(LunaticConstants.EGD); dependency.setId("e" + counter++); generator.addEGD(dependency); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public QuerydependencyContext querydependency() {
			return getRuleContext(QuerydependencyContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 stTGD = false; 
			setState(100);
			querydependency();
			 dependency.setType(LunaticConstants.QUERY); dependency.setId("q" + counter++); generator.addQuery(dependency); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DependencyContext extends ParserRuleContext {
		public Token id;
		public PositiveFormulaContext positiveFormula() {
			return getRuleContext(PositiveFormulaContext.class,0);
		}
		public ConclusionFormulaContext conclusionFormula() {
			return getRuleContext(ConclusionFormulaContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(DependenciesCFParser.IDENTIFIER, 0); }
		public DependencyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dependency; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).enterDependency(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).exitDependency(this);
		}
	}

	public final DependencyContext dependency() throws RecognitionException {
		DependencyContext _localctx = new DependencyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dependency);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(103);
				((DependencyContext)_localctx).id = match(IDENTIFIER);
				setState(104);
				match(T__4);
				}
				break;
			}
			  dependency = new Dependency(); 
			                    formulaWN = new FormulaWithNegations(); 
			                    formulaStack.push(formulaWN);
			                    dependency.setPremise(formulaWN);
			                    inPremise = true;
			                    if(((DependencyContext)_localctx).id!=null) dependency.setId(((DependencyContext)_localctx).id.getText()); 
			setState(108);
			positiveFormula();
			setState(109);
			match(T__5);
			{
			  formulaStack.clear(); inPremise = false;
			setState(111);
			conclusionFormula();
			}
			setState(113);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuerydependencyContext extends ParserRuleContext {
		public Token id;
		public ConclusionQueryFormulaContext conclusionQueryFormula() {
			return getRuleContext(ConclusionQueryFormulaContext.class,0);
		}
		public PositiveFormulaContext positiveFormula() {
			return getRuleContext(PositiveFormulaContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(DependenciesCFParser.IDENTIFIER, 0); }
		public QuerydependencyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_querydependency; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).enterQuerydependency(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).exitQuerydependency(this);
		}
	}

	public final QuerydependencyContext querydependency() throws RecognitionException {
		QuerydependencyContext _localctx = new QuerydependencyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_querydependency);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(115);
				((QuerydependencyContext)_localctx).id = match(IDENTIFIER);
				setState(116);
				match(T__4);
				}
				break;
			}
			  dependency = new Dependency(); 
			                    formulaWN = new FormulaWithNegations(); 
			                    formulaStack.clear(); 
			                    formulaStack.push(formulaWN);
			                    dependency.setPremise(formulaWN);
			                    inPremise = false;
			                    if(((QuerydependencyContext)_localctx).id!=null) dependency.setId(((QuerydependencyContext)_localctx).id.getText()); 
			setState(120);
			conclusionQueryFormula();
			setState(121);
			match(T__7);
			{
			   inPremise = true;
			setState(123);
			positiveFormula();
			}
			setState(125);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PositiveFormulaContext extends ParserRuleContext {
		public RelationalAtomContext relationalAtom() {
			return getRuleContext(RelationalAtomContext.class,0);
		}
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public PositiveFormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_positiveFormula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).enterPositiveFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).exitPositiveFormula(this);
		}
	}

	public final PositiveFormulaContext positiveFormula() throws RecognitionException {
		PositiveFormulaContext _localctx = new PositiveFormulaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_positiveFormula);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			  positiveFormula = new PositiveFormula(); 
			                    positiveFormula.setFather(formulaStack.peek()); 
			                    formulaStack.peek().setPositiveFormula(positiveFormula); 
			setState(128);
			relationalAtom();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(129);
				match(T__8);
				setState(130);
				atom();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConclusionFormulaContext extends ParserRuleContext {
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public ConclusionFormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conclusionFormula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).enterConclusionFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).exitConclusionFormula(this);
		}
	}

	public final ConclusionFormulaContext conclusionFormula() throws RecognitionException {
		ConclusionFormulaContext _localctx = new ConclusionFormulaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_conclusionFormula);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			  positiveFormula = new PositiveFormula(); 
			                      dependency.setConclusion(positiveFormula); 
			setState(137);
			atom();
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(138);
				match(T__8);
				setState(139);
				atom();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConclusionQueryFormulaContext extends ParserRuleContext {
		public QueryAtomContext queryAtom() {
			return getRuleContext(QueryAtomContext.class,0);
		}
		public ConclusionQueryFormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conclusionQueryFormula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).enterConclusionQueryFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).exitConclusionQueryFormula(this);
		}
	}

	public final ConclusionQueryFormulaContext conclusionQueryFormula() throws RecognitionException {
		ConclusionQueryFormulaContext _localctx = new ConclusionQueryFormulaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_conclusionQueryFormula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			  positiveFormula = new PositiveFormula(); 
			                      dependency.setConclusion(positiveFormula); 
			setState(146);
			queryAtom();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public RelationalAtomContext relationalAtom() {
			return getRuleContext(RelationalAtomContext.class,0);
		}
		public BuiltinContext builtin() {
			return getRuleContext(BuiltinContext.class,0);
		}
		public ComparisonContext comparison() {
			return getRuleContext(ComparisonContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DependenciesCFListener ) ((DependenciesCFListener)listener).exitAtom(this);
		}
	}
